fix: Fixed navbar background on mobile

--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -84,7 +84,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         z-index: 2;
         background: var(--secondary-text);
         padding: 0 1rem;
